fix(mobile): some UI element collapsed in mobile layout, apply dvh

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -32,7 +32,7 @@
       /* calculate height of nav list
          viewport height - nav height - masthead x-padding
       */
-      max-height: calc(100vh - #{$nav-height} - 2em);
+      max-height: calc(100dvh - #{$nav-height} - 2em);
     }
   }
 
@@ -90,7 +90,7 @@
       .toc {
         .toc__menu {
           overflow-y: auto;
-          max-height: calc(100vh - 7em);
+          max-height: calc(100dvh - 7em);
         }
       }
     }
